tests/NormalTests/paczka1/small_fuzzy/23972642.err
Error in line 3: VUMfcHf S552 57,6
Error in line 9: A922 S2 96,7
Error in line 13: fVribHv7 A254 a4,2
